# opengl-terrain-gen

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: rapport.md  report.html  report.md
scripts/: deps_setup_debian.sh
src/: CMakeLists.txt  algorithms.cpp  algorithms.hpp  drawable.cpp  drawable.hpp  geomutils.cpp  geomutils.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  terrain.cpp  terrain.hpp
src/terrain/: terrain.cpp  terrain.h
